<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b02626"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/Lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_cE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/Regreso_menu" />

    <TextView
        android:id="@+id/ExOperarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Lista"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/Nomre_op"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TxOperario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ExOperarios"
        android:layout_centerHorizontal="true"
        android:text="@string/Etiqueta_Op"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ExAutorizados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TxCodigo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/autorizacion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TxAutorizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ExAutorizados"
        android:layout_centerHorizontal="true"
        android:text="@string/Etiqueta_Aut"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ExCodigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TxCodigo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/codigo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TxCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TxOperario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/Etiqueta_Cod"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>