<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31a797" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_IP" />

    <EditText
        android:id="@+id/txtIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/txtIP" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtIP"
        android:text="@string/text_Puerto" />

    <EditText
        android:id="@+id/txtPuerto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@id/txtPuerto" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtPuerto"
        android:text="@string/text_Usuario" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/txtUsuario" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtUsuario"
        android:text="@string/text_Contrasena" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/txtContrasena" />

    <Button
        android:id="@+id/btProbarConexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/text_probar_conexion" />

    <Button
        android:id="@+id/BCargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btProbarConexion"
        android:layout_alignEnd="@+id/btProbarConexion"
        android:layout_below="@+id/btProbarConexion"
        android:text="@string/Cargar" />

    <Button
        android:id="@+id/BGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/BCargar"
        android:layout_alignEnd="@+id/BCargar"
        android:layout_below="@+id/BCargar"
        android:text="@string/Guardar" />

    <Button
        android:id="@+id/button_cC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/BGuardar"
        android:layout_alignEnd="@+id/BGuardar"
        android:layout_below="@+id/BGuardar"
        android:text="@string/Regreso_menu" />

</RelativeLayout>