<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="center"
    android:columnCount="2"
    android:rowCount="4"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/button_pedido"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:background="#23ce03"
        android:text="@string/ingreso_pedido" />

    <Button
        android:id="@+id/button_estaciones"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:background="#b02626"
        android:text="@string/menu_estaciones" />

     <Button
        android:layout_width="138dp"
        android:layout_height="167dp"
        android:text="@string/Null"
        android:id="@+id/button3"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:background="#c3b743" />

     <Button
        android:layout_width="wrap_content"
        android:layout_height="149dp"
        android:text="@string/menu_opciones"
        android:id="@+id/button_configuracion"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:background="#31a797" />

     <Button
         android:id="@+id/button2"
         android:layout_width="184dp"
         android:layout_height="114dp"
         android:layout_column="1"
         android:layout_gravity="fill"
         android:layout_row="1"
         android:background="#3c41d3"
         android:gravity="center"
         android:text="@string/Null" />

</GridLayout>

